# minecraftOreDetectorCV

./: .gitignore  Dataflow  README.md  project_walkthrough.md  pyproject.toml
data/annotations/: ground_truth.json  manual_review.json
docs/: hand_off.md
src/: analyze_misses.py  annotate.py  candidate_filters.py  coal_fallback_detector.py  color_diagnostics.py  compare_HSV.py  compare_blur.py  compare_brightness_normalization.py  compare_clahe.py  compare_clean_mask.py  compare_color_mask.py  compare_edges.py  compare_hsv_conversion.py  compare_hybrid_mask.py  compare_preprocessing_stages.py  config.py  copper_detector.py  debug_evaluation.py  debug_visual.py  debug_visualization.py  detection.py  diamond_postprocessor.py  eval_debug.py  evaluate.py  gold_detector.py  iron_detector.py  live_detection.py  live_runner.py  main.py  mask_filters.py  morphology.py  ore_candidate_detection.py  ore_detection_processor.py  ore_rules.py  pipeline.py  preprocessing.py  review_detections.py  runtime_mask_filter.py  segmentation.py  template_repository.py  (+2 more)
src/minecraft_ore_detector/: __init__.py  models.py  paths.py
src/minecraft_ore_detector/app/: __init__.py  config.py  live_detection.py  main.py  pipeline.py
src/minecraft_ore_detector/common/: utils.py
src/minecraft_ore_detector/debug/: __init__.py  analyze_misses.py  color_diagnostics.py  evaluation.py  visualization.py
src/minecraft_ore_detector/detection/: __init__.py  candidate_detection.py  candidate_finder.py  color_validation.py  core.py  geometry.py  mask_statistics.py  plausibility.py  processor.py  rules.py  (+3 more)
(+33 files in other folders)
